kubernetes/labs/services-load-balancing-and-networking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: lab-services-load-balancing-and-networking
