kubernetes/labs/services-load-balancing-and-networking/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
  - name: my-pod
    image: nginx
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
